# LegalAI-Assistant

./: .gitignore
.github/workflows/: ci.yml
LegalFunctionApp/: .gitignore  doc_edit.py  function_app.py  host.json  local.settings.json.example  pyproject.toml  requirements-dev.txt  requirements.txt  word_formating_VM.py
LegalFunctionApp/models/: models.py  rag.py  search.py
LegalFunctionApp/scripts/: doc_edit.py  word_formating_VM.py
LegalFunctionApp/src/config/: __init__.py  load_config.py  model_config.yaml  prompts.py  settings.py
LegalFunctionApp/src/llm/: __init__.py  clients.py
LegalFunctionApp/src/pipeline/: __init__.py  clause_extraction_and_processing.py  deduplication.py  document_generation.py  embedding.py  filtering.py  indexing.py  masking.py  reviewing.py  search.py
LegalFunctionApp/src/services/: __init__.py  blob_storage.py  rag.py  search.py
LegalFunctionApp/src/utils/: __init__.py  models.py  retry.py  token_tracker.py
LegalFunctionApp/tests/: conftest.py  test_clause_processing.py  test_deduplication.py  test_retry.py  test_token_tracker.py
